/*
 *  Copyright 2019 Google Inc. All Rights Reserved.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

syntax = "proto2";

package goosci;
option java_package = "com.google.android.apps.forscience.whistlepunk.metadata";
option java_outer_classname = "Version";
option objc_class_prefix = "GSJ";
option optimize_for = LITE_RUNTIME;


import "gadget_info.proto";

/*
 * Represents the version of a file that is written and may someday be shared
 * with another version of the app.
 *
 * Added in V2.
 */
message FileVersion {
  // The version code of this proto. Devices may use this to understand what
  // version of data they are working with, and to perform upgrades. A
  // combination of the major and minor versions is used to understand what is
  // available in this proto. Major version numbers represent large,
  // non-backwards-compatable changes. See
  // ExperimentCache#upgradeExperimentVersionIfNeeded for more on versions.
  // Version 1.1: Initial version
  optional int32 version = 1 [default = 1];

  // The minor verion code for this proto. Devices may use this to understand
  // what version of data they are working with, and to perform upgrades. A
  // combination of the major and minor versions is used to understand what is
  // available in this proto. Minor version numbers represent small,
  // non-breaking changes. A device running an older version of Science Journal
  // should be able to parse a proto with a newer minorVersion so long as the
  // version is the same. However, that device should only *read* and not
  // *write* older version protos because data would be lost in the write.
  //
  // This value should be odd in pre-release builds of Science Journal, and even
  // for release versions, for further safety.
  //
  // See ExperimentCache#upgradeExperimentVersionIfNeeded for more on versions.
  // Version 1.1: Initial version
  optional int32 minorVersion = 2 [default = 1];

  // Which platform last wrote this file (Android or iOS)
  optional GadgetInfo.Platform platform = 3;

  // This is a monotonically-increasing, platform-specific number.  Ideally, it
  // should not be needed to understand the semantics of files written by
  // released builds of the app. However, in the event a bug is introduced that
  // effects written files, this may help to identify the affected files.
  optional int32 platformVersion = 4;
}
